# tentabot

./: .gitignore  CMakeLists.txt  README.md  install_tentabot.sh  package.xml  setup.py
benchmark/matlab/: bench_avg_nav_duration.fig  bench_avg_nav_duration_IJRC.fig  bench_avg_nav_length.eps  bench_avg_nav_length_IJRC.eps  bench_avg_nav_length_IJRC.fig  bench_success_rate.fig  bench_success_rate_IJRC.eps  csvimport.m  tnav_bench.m  tnav_bench_extract_all.m  tnav_bench_extract_result.m
benchmark/tnav/: 20200114_171830_param_forest4.csv  20200114_171830_pre_forest4.csv  20200114_171830_process_forest4.csv  20200114_171855_result_forest4.csv  20200114_172025_param_forest7.csv  20200114_172025_pre_forest7.csv  20200114_172025_process_forest7.csv  20200114_172053_result_forest7.csv  20200114_172218_param_forest7.csv  20200114_172218_pre_forest7.csv  20200114_172218_process_forest7.csv  20200114_172351_pre_forest8.csv  20200114_172351_process_forest8.csv  20200114_172416_result_forest8.csv  20200114_181230_pre_cylinders0.csv  20200114_181230_process_cylinders0.csv  20200114_181305_result_cylinders0.csv  20200114_181618_pre_cylinders0.csv  20200114_181618_process_cylinders0.csv  20200114_181655_result_cylinders0.csv  20200114_183306_pre_cylinders0.csv  20200114_183306_process_cylinders0.csv  20200114_183406_result_cylinders0.csv  20200114_184653_pre_cylinders0.csv  20200114_184653_process_cylinders0.csv  20200114_184727_result_cylinders0.csv  20200114_184916_pre_cylinders0.csv  20200114_184916_process_cylinders0.csv  20200114_184948_result_cylinders0.csv  20200114_185212_pre_cylinders0.csv  20200114_185212_process_cylinders0.csv  20200114_185246_result_cylinders0.csv  20200114_185427_param_cylinders0.csv  20200114_185427_pre_cylinders0.csv  20200114_185427_process_cylinders0.csv  20200114_185500_result_cylinders0.csv  20200115_111110_pre_cylinders0.csv  20200115_111110_process_cylinders0.csv  20200115_111146_result_cylinders0.csv  20200115_111415_pre_forest8.csv  (+2 more)
config/laser_filters/: laser_filter_config.yaml
config/laser_mapping/: config_laser_to_image.yaml  config_laser_to_rings.yaml
config/map_utility/: config_map_utility_cylinders0_firefly.yaml  config_map_utility_forestX_firefly.yaml  config_map_utility_igibson_turtlebot2.yaml  config_map_utility_jackal.yaml  config_map_utility_jackal_real.yaml  config_map_utility_rosbot.yaml  config_map_utility_stretch.yaml  config_map_utility_turtlebot2.yaml  config_map_utility_turtlebot3.yaml
config/move_base/: turtlebot3_costmap_common.yaml  turtlebot3_planner.yaml
config/pedsim_ros/: grid.xml  overtaking.xml  testing_lvl_10.xml  testing_lvl_2.xml  testing_lvl_3.xml  testing_lvl_5.xml  testing_lvl_6.xml  testing_lvl_7.xml  testing_lvl_9.xml  testing_validation.xml  testing_validation_old.xml  training_garden_dynamic_0.xml  training_garden_dynamic_1.xml  training_garden_dynamic_2.xml
config/task_nav/: config_task_nav_cylinders0_firefly.yaml  config_task_nav_forestX_firefly.yaml  config_task_nav_igibson_turtlebot2.yaml  config_task_nav_jackal.yaml  config_task_nav_jackal_real.yaml  config_task_nav_rosbot.yaml  config_task_nav_stretch.yaml  config_task_nav_turtlebot2.yaml  config_task_nav_turtlebot3.yaml
config/tentabot_drl/: config_tentabot_drl_plot_result_training.yaml  drl_testing_result_plot_params.yaml  drl_training_result_plot_params.yaml  tentabot_drl_turtlebot3_testing_params.yaml  (+1 more)
docker/: CLUSTER.md  Dockerfile  install_tentabot_docker.sh
docs/: ISSUES.md  MANUAL_INSTALLATION.md  real_robot_examples.md
images/: gazebo_rviz.eps  maps.eps
include/: common_utility.h  goal_utility.h  laser_to_image.h  map_utility.h  tentabot.h  trajectory_sampling_utility.h
launch/: tentabot_framework.launch  tentabot_go_big_forest.launch  tentabot_go_cylinder.launch  tentabot_go_extend_big_forest.launch  tentabot_go_extend_cylinder.launch  tentabot_go_extend_forest.launch  tentabot_go_forest.launch  tentabot_go_mobiman.launch  tentabot_server.launch
models/lds01/: config.yaml
rviz/: debug.rviz  firefly.rviz  jackal.rviz  jackal_real.rviz  rosbot.rviz  simulation.rviz  social_contexts_activities.rviz  stretch.rviz  stretch_real.rviz  tentabot_firefly.rviz  tentabot_il.rviz  tentabot_rl_social.rviz  tentabot_turtlebot3.rviz  turtlebot2.rviz  turtlebot3.rviz
scripts/: plot_drl_testing_result.py  plot_drl_training_result.py  spawn_pedsim_agents.py  tentabot_framework_launch.py
src/: goal_utility.cpp  goal_utility.h  laser_to_image.cpp  laser_to_image_server.cpp  map_utility.cpp  map_utility.h  map_utility_server.cpp  publish_robot_pose_command.cpp  t_bspline_lee_position_controller_node.cpp  tentabot.cpp  tentabot_bspline_lee_position_controller_node.cpp  tentabot_go.cpp  tentabot_go.h  tentabot_lee_position_controller_node.cpp  tentabot_server.cpp  trajectory_sampling_utility.cpp
srv/: get_laser_image.srv  reset_map_utility.srv  rl_step.srv  update_goal.srv
urdf/: camera_gazebo.urdf.xacro  jackal_custom1.urdf.xacro  jackal_robosense.urdf.xacro  kobuki_gazebo_with_ns.urdf.xacro  kobuki_hexagons_kinect_with_ns.urdf.xacro  kobuki_with_ns.urdf.xacro  materials.xacro  mav_d435.gazebo  mav_r200.gazebo  model.sdf  model.urdf  r200.urdf.xacro  realsense-d435.macro.xacro  realsense-d435_with_ns.macro.xacro  tentabot.urdf.xacro  turtlebot2_common_library.urdf.xacro  turtlebot2_custom1.urdf.xacro  turtlebot2_hexagons.urdf.xacro  turtlebot2_kinect.urdf.xacro  turtlebot2_kobuki_hexagons_kinect_sick.urdf.xacro  turtlebot2_properties.urdf.xacro  turtlebot2_sick.urdf.xacro  turtlebot3_custom1.urdf.xacro  turtlebot3_custom2.urdf.xacro
worlds/: corridor.world  grid.world  hallway.world  testing_lvl_1.world  testing_lvl_10.world  testing_lvl_2.world  testing_lvl_3.world  testing_lvl_4.world  testing_lvl_5.world  testing_lvl_6.world  testing_lvl_7.world  testing_lvl_8.world  testing_lvl_9.world  training_garden_dynamic_0.world  training_garden_dynamic_1.world  training_garden_dynamic_2.world  training_garden_static_0.world  training_garden_static_1.world  training_garden_static_1_old.world  training_mav_garden_static_0.world  validation.world
(+1289 files in other folders)
